[gd_scene load_steps=110 format=2]

[ext_resource path="res://assets/brown_hellspawn_spritesheet/hellspawn_brown_Run.png" type="Texture" id=1]
[ext_resource path="res://assets/brown_hellspawn_spritesheet/hellspawn_brown_Idle.png" type="Texture" id=2]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_ne.tres" type="Animation" id=3]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_se.tres" type="Animation" id=4]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_e.tres" type="Animation" id=5]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_e.tres" type="Animation" id=6]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_se.tres" type="Animation" id=7]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_n.tres" type="Animation" id=8]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_s.tres" type="Animation" id=9]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_nw.tres" type="Animation" id=10]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_s.tres" type="Animation" id=11]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_sw.tres" type="Animation" id=12]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_nw.tres" type="Animation" id=13]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_w.tres" type="Animation" id=14]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_w.tres" type="Animation" id=15]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_n.tres" type="Animation" id=16]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_run_ne.tres" type="Animation" id=17]
[ext_resource path="res://assets/animations/enemy/brown_hellspawn/brown_hellspawn_idle_sw.tres" type="Animation" id=18]
[ext_resource path="res://enemy_scenes/Enemy.gd" type="Script" id=19]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1792, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=90]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "brown_hellspawn_idle_se",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "brown_hellspawn_idle_nw",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "brown_hellspawn_idle_ne",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "brown_hellspawn_run_sw",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "brown_hellspawn_idle_e",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "brown_hellspawn_run_n",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "brown_hellspawn_idle_s",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "brown_hellspawn_run_ne",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "brown_hellspawn_idle_n",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "brown_hellspawn_run_e",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "brown_hellspawn_run_nw",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "brown_hellspawn_run_s",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "brown_hellspawn_idle_w",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ) ],
"loop": true,
"name": "brown_hellspawn_idle_sw",
"speed": 5.0
}, {
"frames": [ SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ) ],
"loop": true,
"name": "brown_hellspawn_run_se",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": true,
"name": "brown_hellspawn_run_w",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]
frames = SubResource( 90 )
animation = "brown_hellspawn_idle_e"
offset = Vector2( 0, -40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemySprite"]
anims/brown_hellspawn_idle_e = ExtResource( 5 )
anims/brown_hellspawn_idle_n = ExtResource( 8 )
anims/brown_hellspawn_idle_ne = ExtResource( 3 )
anims/brown_hellspawn_idle_nw = ExtResource( 10 )
anims/brown_hellspawn_idle_s = ExtResource( 9 )
anims/brown_hellspawn_idle_se = ExtResource( 4 )
anims/brown_hellspawn_idle_sw = ExtResource( 18 )
anims/brown_hellspawn_idle_w = ExtResource( 14 )
anims/brown_hellspawn_run_e = ExtResource( 6 )
anims/brown_hellspawn_run_n = ExtResource( 16 )
anims/brown_hellspawn_run_ne = ExtResource( 17 )
anims/brown_hellspawn_run_nw = ExtResource( 13 )
anims/brown_hellspawn_run_s = ExtResource( 11 )
anims/brown_hellspawn_run_se = ExtResource( 7 )
anims/brown_hellspawn_run_sw = ExtResource( 12 )
anims/brown_hellspawn_run_w = ExtResource( 15 )

[node name="EnemyHP" type="ColorRect" parent="EnemySprite"]
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
margin_bottom = -120.0
color = Color( 0.568627, 0.0352941, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Enemy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Enemy_mouse_exited"]
